bind/contrib/manifests/example-backend/insecure/example-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-backend
  labels:
    app: example-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: example-backend
    spec:
      serviceAccountName: example-backend
      containers:
        - name: example-backend
          image: public.ecr.aws/w5n9a2g2/klutch/example-backend:v1.4.0
          command:
            - /example-backend
          args:
            - --namespace-prefix=cluster
            - --pretty-name=MangoDB
            - --consumer-scope=Namespaced
            - --oidc-issuer-client-id=$(OIDC-ISSUER-CLIENT-ID)
            - --oidc-issuer-client-secret=$(OIDC-ISSUER-CLIENT-SECRET)
            - --oidc-issuer-url=$(OIDC-ISSUER-URL)
            - --oidc-callback-url=$(OIDC-CALLBACK-URL)
            - --listen-address=0.0.0.0:443
            - --cookie-signing-key=$(COOKIE-SIGNING-KEY)
          resources:
            limits:
              cpu: '2'
              memory: 2Gi
            requests:
              cpu: '100m'
              memory: 256Mi
      volumes:
        - name: oidc-config
          secret:
            secretName: oidc-config
        - name: cookie-config
          secret:
            secretName: cookie-config
---
apiVersion: v1
kind: Service
metadata:
  name: example-backend
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: example-backend
      port: 443
      targetPort: 443
  selector:
    app: example-backend
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: example-backend-envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-backend-gateway
spec:
  gatewayClassName: example-backend-envoy-gateway
  listeners:
  - name: http
    hostname: mangodb.de
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-backend
spec:
  hostnames:
  - "mangodb.de"
  parentRefs:
  - name: example-backend-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: example-backend
      port: 443
